feat!: Migrate to Jakarta EE 9 / Servlet (#83)
* feat: Migrate to Jakarta EE 9 / Servlet 5

Co-authored-by: marcin <106965834+MarcinVaadin@users.noreply.github.com>